Add turbolinks_verification as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "swiper_app_old"]
     path = swiper_app_old
     url = git@github.com:ichikawaharuki/JavaScript.git
+[submodule "turbolinks_verification"]
+	path = turbolinks_verification
+	url = git@github.com:ichikawaharuki/JavaScript.git
